syntax = "proto3";

import "common_domain.proto";
import "google/protobuf/timestamp.proto";

package app.improving.ordercontext;

enum OrderStatus {
    ORDER_STATUS_DRAFT = 0;
    ORDER_STATUS_PENDING = 2;
    ORDER_STATUS_INPROCESS = 3;
    ORDER_STATUS_READY = 4;
    ORDER_STATUS_DELIVERED = 5;
    ORDER_STATUS_CANCELLED = 6;
    ORDER_STATUS_RELEASED = 7;
    ORDER_STATUS_UNKNOWN = 8;
}

message LineItem {
        Sku product = 1;
        int32     quantity = 2;
        double    line_total = 3;
}

message OrderInfo {
        repeated LineItem line_items = 2;
        string special_instructions = 3;
        double order_total = 4;
}

message OrderInfoUpdate {
    repeated LineItem line_items = 1;
    optional string special_instructions = 2;
}

message OrderMetaInfo  {
    MemberId member_id = 2;
    StoreId store_id = 3;
    google.protobuf.Timestamp created_on = 4;
    MemberId last_modified_by = 5;
    google.protobuf.Timestamp last_modified_on = 6;
    OrderStatus status = 7;
}

message OrderCreated {
    OrderId order_id = 1;
    OrderInfo info = 2;
    OrderMetaInfo meta = 3;
}
message OrderStatusUpdated {
    OrderId order_id = 1;
    OrderStatus new_status = 2;
    MemberId updating_member = 3;
}
message OrderInfoUpdated {
    OrderId order_id = 1;
    OrderInfo info = 2;
    OrderMetaInfo meta = 3;
    MemberId updating_member = 4;
}
message OrderCanceled {
    OrderId order_id = 1;
    OrderInfo info = 2;
    OrderMetaInfo meta = 3;
    MemberId cancelling_member = 4;
}
message GetOrderInfo {
    OrderId order_id = 1;
    MemberId requesting_member = 2;
}
message OrderInfoResult {
    OrderId order_id = 1;
    OrderInfo info = 2;
}
message OrderReleased {
    OrderId order_id = 1;
    MemberId releasing_member = 2;
}
